--- a/index.html
+++ b/index.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=\, initial-scale=1.0">
     <title>G3 Architects</title>
     <link rel="stylesheet" href="./styles/architects.css">
 </head>
+
 <body class="work-sans-font ">
     <header class="bg-light">
         <nav class="navbar display-flex">
             <h3 class="brand">G3 Architects</h3>
             <ul class="nav-links display-flex">
-                <!-- li.nav-items*4>a.nav-link -->   
+                <!-- li.nav-items*4>a.nav-link -->
                 <li class="nav-item"><a href="" class="nav-link text-grey">Home</a></li>
                 <li class="nav-item"><a href="" class="nav-link text-grey">About</a></li>
                 <li class="nav-item"><a href="" class="nav-link text-grey">Contact Us</a></li>
@@ -20,16 +22,84 @@
         </nav>
         <div class="banner">
             <div class="banner-content">
-                <h1 class="banner-title">Brand New 
+                <h1 class="banner-title">Brand New
                     Group of Architects</h1>
-                    <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even</p>
-                    <button class="btn-primary">Explore More</button>
+                <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but the
+                    majority have suffered alteration in some form, by injected humour, or randomised words which don't
+                    look even</p>
+                <button class="btn-primary">Explore More</button>
             </div>
-                <img class="banner-img" src="./images/banner.png" alt="">
+            <img class="banner-img" src="./images/banner.png" alt="">
         </div>
     </header>
-    
+
     <main>
+        <section class="teams display-flex">
+            <div class="team-img-container">
+                <img src="./images/team1.png" alt="">
+                <img src="./images/team2.png" alt="">
+                <img src="./images/team3.png" alt="">
+                <img src="./images/team4.png" alt="">
+            </div>
+            <div class="our-features">
+                <h3 class="section-title"><span id="quick-list" class="text-grey">Quick list</span><span> of Our
+                    </span><span id="" class="text-primary">Features</span></h3>
+                <p class="feature-description text-light-grey">There are many variations of passages of Lorem Ipsum
+                    available, but the majority have suffered alteration in some form, by injected humour, or randomised
+                    words which don't look even</p>
+                <button class="btn-primary">Explore More</button>
+            </div>
+
+        </section>
+
+
+        <!-- features will enjoy -->
+        <section>
+            <h3 class="section-title">Some Facts</h3>
+            <p class="text-light-grey fact-description">There are many variations of passages of Lorem Ipsum available,
+                but the majority have suffered
+                alteration.</p>
+            <div class="facts-container">
+                <!-- .fact-card*4>img.fact-icon+h4.fact-number+h5.fact-name -->
+                <div class="fact-card display-flex">
+                    <div>
+                        <img src="./images/icons/ribon.png" alt="" class="fact-icon">
+                        <h4 class="fact-number">54</h4>
+                        <h5 class="fact-name">Awards Winnings</h5>
+                    </div>
+                </div>
+                <div class="fact-card display-flex">
+                    <div>
+                        <img src="./images/icons/projects.png" alt="" class="fact-icon">
+                        <h4 class="fact-number">1458</h4>
+                        <h5 class="fact-name">Project Finished</h5>
+                    </div>
+                </div>
+                <div class="fact-card display-flex">
+                    <div>
+                        <img src="./images/icons/customers.png" alt="" class="fact-icon">
+                        <h4 class="fact-number">590</h4>
+                        <h5 class="fact-name">Clients Worked</h5>
+                    </div>
+                </div>
+                <div class="fact-card display-flex">
+                    <div>
+                        <img src="./images/icons/email.png" alt="" class="fact-icon">
+                        <h4 class="fact-number">22,578</h4>
+                        <h5 class="fact-name">Email Send</h5>
+                    </div>
+                </div>
+
+            </div>
+        </section>
+
+        <!-- some facts -->
+        <section>
+            <h3 class="some-facts">
+
+            </h3>
+        </section>
+
 
     </main>
 
@@ -37,4 +107,5 @@
 
     </footer>
 </body>
+
 </html>
