--- a/index.html
+++ b/index.html
@@ -49,9 +49,49 @@
                     words which don't look even</p>
                 <button class="btn-primary">Explore More</button>
             </div>
-
         </section>
 
+        <!-- features u will love section -->
+        <section class="features display-flex">
+            <div>
+                <h3 id="feature-section-title" class="section-title">Features you will <br> love & enjoy</h3>
+                <p class="text-light-grey">There are many variations of passages of Lorem Ipsum available, but the
+                    majority have suffered alteration in some form, by injected humour, or randomised words which don't
+                    look even</p>
+
+                <!-- feature card container -->
+                <div class="feature-card">
+                    <h4 class="feature-title">Dexktop & Mobile Version</h4>
+                    <p class="text-light-grey">There are many variations of passages of Lorem Ipsum available, but the
+                        majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="feature-card">
+                    <h4 class="feature-title"> Drag & Drop Builder</h4>
+                    <p class="text-light-grey">There are many variations of passages of Lorem Ipsum available, but the
+                        majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="feature-card">
+                    <h4 class="feature-title">Awesome Modern Design</h4>
+                    <p class="text-light-grey">There are many variations of passages of Lorem Ipsum available, but the
+                        majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+                <div class="feature-card">
+                    <h4 class="feature-title">Super Easy to Edit</h4>
+                    <p class="text-light-grey">There are many variations of passages of Lorem Ipsum available, but the
+                        majority have suffered alteration in some form, by injected humour, or randomised...........</p>
+                </div>
+
+            </div>
+
+            <div>
+                <img src="./images/architect.png" alt="">
+                <button id="experience-badge" class="primary-btn">
+                    <span id="experience-year">10+ Years</span>
+                    <br>
+                    <span>Experience</span>
+                </button>
+            </div>
+        </section>
 
         <!-- some facts section -->
         <section>
@@ -95,17 +135,18 @@
 
         <!-- our sponsors -->
         <section class="our-sponsors">
-                <div class="sponsor-info">
-                    <h3 class="section-title">Our Sponsors</h3>
-                    <p class="text-light-grey">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration.</p>
-                </div>
-                <div class="sponsor-companies">
-                    <img src="./images/sponsors/spotify.png" alt="">
-                    <img src="./images/sponsors/amazon.png" alt="">
-                    <img src="./images/sponsors/google.png" alt="">
-                    <img src="./images/sponsors/telerama.png" alt="">
-                    <img src="./images/sponsors/figma.png" alt="">
-                </div>
+            <div class="sponsor-info">
+                <h3 class="section-title">Our Sponsors</h3>
+                <p class="text-light-grey">There are many variations of passages of Lorem Ipsum available, but the
+                    majority have suffered alteration.</p>
+            </div>
+            <div class="sponsor-companies">
+                <img src="./images/sponsors/spotify.png" alt="">
+                <img src="./images/sponsors/amazon.png" alt="">
+                <img src="./images/sponsors/google.png" alt="">
+                <img src="./images/sponsors/telerama.png" alt="">
+                <img src="./images/sponsors/figma.png" alt="">
+            </div>
         </section>
     </main>
 
