added footer and yet to responsive

--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
 
             </div>
 
-            <div>
+            <div class="featured-architect">
                 <img src="./images/architect.png" alt="">
-                <button id="experience-badge" class="primary-btn">
+                <button id="experience-badge" class="btn-primary">
                     <span id="experience-year">10+ Years</span>
                     <br>
                     <span>Experience</span>
@@ -150,8 +150,8 @@
         </section>
     </main>
 
-    <footer>
-
+    <footer class="site-footer">
+        <h4>All rights reserved copyright@2023 startup landing page design</h4>
     </footer>
 </body>
 
